--- a/NetUtils.xcodeproj/xcshareddata/xcschemes/NetUtils-macOS.xcscheme
+++ b/NetUtils.xcodeproj/xcshareddata/xcschemes/NetUtils-macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0830"
+   LastUpgradeVersion = "1000"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F89F99B51AF00EBD008719EC"
-               BuildableName = "NetUtils.framework"
-               BlueprintName = "NetUtils"
+               BlueprintIdentifier = "F84D6AC22180F552000C928E"
+               BuildableName = "libNetUtils-macOS.dylib"
+               BlueprintName = "NetUtils-macOS"
                ReferencedContainer = "container:NetUtils.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,9 +28,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F89F99C01AF00EBD008719EC"
-               BuildableName = "NetUtilsTests.xctest"
-               BlueprintName = "NetUtilsTests"
+               BlueprintIdentifier = "F84D6AD02180F5BD000C928E"
+               BuildableName = "NetUtils-macOSTests.xctest"
+               BlueprintName = "NetUtils-macOSTests"
                ReferencedContainer = "container:NetUtils.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,16 +40,15 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F89F99C01AF00EBD008719EC"
-               BuildableName = "NetUtilsTests.xctest"
-               BlueprintName = "NetUtilsTests"
+               BlueprintIdentifier = "F84D6AD02180F5BD000C928E"
+               BuildableName = "NetUtils-macOSTests.xctest"
+               BlueprintName = "NetUtils-macOSTests"
                ReferencedContainer = "container:NetUtils.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -57,9 +56,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F89F99B51AF00EBD008719EC"
-            BuildableName = "NetUtils.framework"
-            BlueprintName = "NetUtils"
+            BlueprintIdentifier = "F84D6AC22180F552000C928E"
+            BuildableName = "libNetUtils-macOS.dylib"
+            BlueprintName = "NetUtils-macOS"
             ReferencedContainer = "container:NetUtils.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -79,9 +78,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F89F99B51AF00EBD008719EC"
-            BuildableName = "NetUtils.framework"
-            BlueprintName = "NetUtils"
+            BlueprintIdentifier = "F84D6AC22180F552000C928E"
+            BuildableName = "libNetUtils-macOS.dylib"
+            BlueprintName = "NetUtils-macOS"
             ReferencedContainer = "container:NetUtils.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -97,9 +96,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "F89F99B51AF00EBD008719EC"
-            BuildableName = "NetUtils.framework"
-            BlueprintName = "NetUtils"
+            BlueprintIdentifier = "F84D6AC22180F552000C928E"
+            BuildableName = "libNetUtils-macOS.dylib"
+            BlueprintName = "NetUtils-macOS"
             ReferencedContainer = "container:NetUtils.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
