--- a/NetUtils-macOSTests/Info.plist
+++ b/NetUtils-macOSTests/Info.plist
@@ -13,12 +13,10 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
-	<string>FMWK</string>
+	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.0.3</string>
+	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 Stefan van den Oord. All rights reserved.</string>
+	<string>1</string>
 </dict>
 </plist>
