--- a/NetUtils.xcodeproj/xcshareddata/xcschemes/NetUtils-macOS.xcscheme
+++ b/NetUtils.xcodeproj/xcshareddata/xcschemes/NetUtils-macOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F84D6B192180FBCA000C928E"
-               BuildableName = "NetUtils_macOS.framework"
+               BuildableName = "NetUtils.framework"
                BlueprintName = "NetUtils-macOS"
                ReferencedContainer = "container:NetUtils.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F84D6B192180FBCA000C928E"
-            BuildableName = "NetUtils_macOS.framework"
+            BuildableName = "NetUtils.framework"
             BlueprintName = "NetUtils-macOS"
             ReferencedContainer = "container:NetUtils.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F84D6B192180FBCA000C928E"
-            BuildableName = "NetUtils_macOS.framework"
+            BuildableName = "NetUtils.framework"
             BlueprintName = "NetUtils-macOS"
             ReferencedContainer = "container:NetUtils.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F84D6B192180FBCA000C928E"
-            BuildableName = "NetUtils_macOS.framework"
+            BuildableName = "NetUtils.framework"
             BlueprintName = "NetUtils-macOS"
             ReferencedContainer = "container:NetUtils.xcodeproj">
          </BuildableReference>
