Uses xenial version of swift and proper dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,10 @@ matrix:
       addons:
         apt:
           packages:
-            - libcurl4
             - clang
             - libicu-dev
+            - libpython2.7
+            - libcurl4-openssl-dev
       cache:
         directories:
           - $HOME/swift
