[ci] Call swift build directly instead of using old Travis script

--- a/.github/workflows/swift-package.yml
+++ b/.github/workflows/swift-package.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Run tests
       run: swift test -v
     - name: Build sample project
-      run: cd Tests/Linux && ./runTest.sh
+      run: cd Tests/Linux/App && swift build -v
