--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -28,3 +28,7 @@ jobs:
           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
           xcodebuild clean build analyze test -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 13" | xcpretty && exit ${PIPESTATUS[0]}
+      - name: Build Swift 4 test app
+        run: cd Tests/Swift4 && ./runTest.sh
+      - name: Build Swift 5 test app
+        run: cd Tests/Swift5 && ./runTest.sh
